[gd_scene load_steps=7 format=2]

[ext_resource path="res://NetLobby/PreLobby.gd" type="Script" id=1]
[ext_resource path="res://r_Standard/Font/comic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://NetLobby/Lobby.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 64
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 2 )

[node name="PreLobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
margin_left = 876.0
margin_top = 443.621
margin_right = 1044.0
margin_bottom = 649.621
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Name" type="LineEdit" parent="Buttons"]
margin_right = 168.0
margin_bottom = 74.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Name"
max_length = 20
placeholder_text = "Name"

[node name="Join" type="Button" parent="Buttons"]
margin_top = 78.0
margin_right = 168.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 3 )
text = "Join"

[node name="Lobby" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="Buttons/Join" to="." method="_on_Join_pressed"]
[connection signal="allReady" from="Lobby" to="." method="_on_Lobby_allReady"]
[connection signal="backToMenu" from="Lobby" to="." method="_on_Lobby_backToMenu"]
[connection signal="despawn_player" from="Lobby" to="." method="despawn_player"]
[connection signal="initGame" from="Lobby" to="." method="_on_Lobby_initGame"]
[connection signal="lobbyStarting" from="Lobby" to="." method="_on_Lobby_lobbyStarting"]
[connection signal="onError" from="Lobby" to="." method="_on_Lobby_onError"]
[connection signal="spawn_player" from="Lobby" to="." method="spawn_player"]
